policies/policy-44c53cce-cf25-47a2-bfee-ea8e55f24063.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-44c53cce-cf25-47a2-bfee-ea8e55f24063
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: 2cf68968-dfb2-4e14-97f3-c866779a812b
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: b77740b6-3e8b-4314-96a2-893b683b3370
      ports:
        - port: 8080
          protocol: TCP
