policies/policy-66e99051-dd80-4b86-8846-e487230f797b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-66e99051-dd80-4b86-8846-e487230f797b
  namespace: 5ecb31a3-809d-4c2e-819c-c1be164a23f1
spec:
  podSelector:
    matchLabels:
      app: 2cf68968-dfb2-4e14-97f3-c866779a812b
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: f6eaae66-b0da-432b-bd76-feb3ec20739a
      ports:
        - port: 8080
          protocol: TCP
