policies/policy-ad4071ca-7fb6-40f2-b766-f314d032998d.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-ad4071ca-7fb6-40f2-b766-f314d032998d
  namespace: 5ecb31a3-809d-4c2e-819c-c1be164a23f1
spec:
  podSelector:
    matchLabels:
      app: 2cf68968-dfb2-4e14-97f3-c866779a812b
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: b77740b6-3e8b-4314-96a2-893b683b3370
      ports:
        - port: 8080
          protocol: TCP
